--- a/templates/base.html
+++ b/templates/base.html
@@ -10,11 +10,10 @@ Licence URI: http://www.os-templates.com/template-terms
 <head>
 	<title>程式設計輕鬆學─使用Scratch2| {% block title %}Homepage{% endblock %}</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>	
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />        
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
 {% block head_ext %}{% endblock %}
 	<link href="/static/css/layout.css" rel="stylesheet" type="text/css" media="all">
-	
 </head>
 <body id="top">
 <!-- ################################################################################################ -->
@@ -37,25 +36,24 @@ Licence URI: http://www.os-templates.com/template-terms
 		{% endif %}
 		{% if user.is_authenticated %}
 		<li><a href="/account">大廳</a></li>	
+			{% if user.id == 1 %}
+		<li><a href="/account/userlist">帳號管理</a></li>
+			{% endif %}				        
 		        <li><a href="/student/classroom">班級</a></li>	
 			{% for group in user.groups.all %}
 				{% if group.name == 'teacher' %}
 		<li><a href="/teacher/classroom">教師管理</a></li>
+		<li><a href="/account/event">事件</a></a></li>		
 				{% endif %}		
 			{% endfor %}
-		{% if user.id == 1 %}
-	
-		<li><a href="/account/userlist">帳號管理</a></li>
-			{% endif %}				        
 		{% endif %}
-		<li><a href="/account/event">事件</a></a></li>		
       </ul>
     </div>
     <div class="fl_right">
       <ul class="nospace linklist">
 		{% if user.is_authenticated %}
 		<li><a href="/account/profile/{{user.id}}"><img src="/static/avatar/s{{ user.profile.avatar }}.png"><strong>{{ user.first_name }}</strong></a></li>
-		<li><a href="/account/logout/?next=/account/suss_logout/{{user.id}}" class='button'>登出</a></li>
+		<li><a href="/account/logout" class='button'>登出</a></li>
 		{% else %}
 		<li>歡迎</li>
 		<li>請<a href="/account/login" class='button'>登入</a></li>
@@ -93,7 +91,6 @@ Licence URI: http://www.os-templates.com/template-terms
     </div>
   </div>
 </div>
-
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
@@ -136,16 +133,12 @@ Licence URI: http://www.os-templates.com/template-terms
     <!-- ################################################################################################ -->
     <p class="fl_left">Copyright &copy; 2016 - All Rights Reserved - <a href="#">高慧君</a></p>
     <p class="fl_right">Template by <a target="_blank" href="http://www.os-templates.com/" title="Free Website Templates">OS Templates</a> <a href="http://www.freepik.com">Designed by Freepik</a></p>
-
     <!-- ################################################################################################ -->
   </div>
 </div>
 <!-- JAVASCRIPTS -->
-
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="/static/js/jquery.mobilemenu.js"></script>
-<script src=" http://cdn.jsdelivr.net/jquery.cookie/1.4.1/jquery.cookie.min.js "></script>
+<script src="http://cdn.jsdelivr.net/jquery.cookie/1.4.1/jquery.cookie.min.js "></script>
 <script>
   var csrftoken = $.cookie('csrftoken');
   function csrfSafeMethod(method) {
@@ -165,6 +158,8 @@ Licence URI: http://www.os-templates.com/template-terms
     {% block domready %}
     {% endblock %}
   });
+  {% block userscript %}
+  {% endblock %}
 </script>  
 </body>
 </html>
