--- a/templates/show/teacherlist.html
+++ b/templates/show/teacherlist.html
@@ -8,7 +8,7 @@
 <tr>
 <TD>姓名</TD>
 {% for show in lists.items.0.1 %}
-<td><a href="/show/detail/{{show.2.id}}">{{show.2.name}}</a><BR>{% for member in show.3 %}({{member.seat}}){{member.student.first_name}}<BR>{% endfor %}</td>
+<td>{% if show.2.done %}<a href="/show/detail/{{show.2.id}}">{% endif %}{{show.2.name}}</a><BR>{% for member in show.3 %}({{member.seat}}){{member.student.first_name}}<BR>{% endfor %}</td>
 {% endfor %}
 </tr>
   {% for key, value in lists.items %}
@@ -24,4 +24,5 @@
 	</tr>
   {% endfor %}
 </table>
+
 {% endblock %}
