--- a/templates/student/lesson.html
+++ b/templates/student/lesson.html
@@ -187,14 +187,14 @@ $(function () {
   <ul class="tabs">
     <li><a href="#tab1">影片：計次式迴圈</a></li>
     <li><a href="#tab2">範例：馬兒跑步</a></li>
-	<li><a href="#tab3">影片</a></li>
-	<li><a href="#tab4">心智圖</a></li>	
+	<li><a href="#tab3">影片1</a></li>
+	<li><a href="#tab4">心智圖1</a></li>	
 	{% if user.is_authenticated %}	
     <li><a href="#tab5">作業：馬兒跑步</a></li>
 	{% endif %}
     <li><a href="#tab6">練習：變大變小</a></li>
-    <li><a href="#tab7">影片</a></li>
-	<li><a href="#tab8">心智圖</a></li>
+    <li><a href="#tab7">影片2</a></li>
+	<li><a href="#tab8">心智圖2</a></li>
 	{% if user.is_authenticated %}	
     <li><a href="#tab9">作業：變大變小</a></li>    
 	{% endif %}
@@ -250,14 +250,14 @@ $(function () {
   <ul class="tabs">
     <li><a href="#tab1">影片：條件式迴圈</a></li>
     <li><a href="#tab2">範例：貓狗賽跑</a></li>
-    <li><a href="#tab3">影片</a></li>
-    <li><a href="#tab4">心智圖</a></li>
+    <li><a href="#tab3">影片1</a></li>
+    <li><a href="#tab4">心智圖1</a></li>
 	{% if user.is_authenticated %}	
     <li><a href="#tab5">作業：貓狗賽跑</a></li>
  	{% endif %}
    <li><a href="#tab6">練習：發球</a></li>    
-    <li><a href="#tab7">影片</a></li>    
-    <li><a href="#tab8">心智圖</a></li>
+    <li><a href="#tab7">影片2</a></li>    
+    <li><a href="#tab8">心智圖2</a></li>
 	{% if user.is_authenticated %}    
     <li><a href="#tab9">作業：發球</a></li>    
 	{% endif %}
@@ -313,14 +313,14 @@ $(function () {
   <ul class="tabs">
     <li><a href="#tab1">影片：無窮迴圈</a></li>
     <li><a href="#tab2">範例：魚兒水中游</a></li>
-    <li><a href="#tab3">影片</a></li>
-    <li><a href="#tab4">心智圖</a></li>
+    <li><a href="#tab3">影片1</a></li>
+    <li><a href="#tab4">心智圖1</a></li>
 	{% if user.is_authenticated %}
     <li><a href="#tab5">作業：魚兒水中游</a></li>
  	{% endif %}
    <li><a href="#tab6">練習：不斷發球</a></li>    
-    <li><a href="#tab7">影片</a></li>  
-    <li><a href="#tab8">心智圖</a></li>  
+    <li><a href="#tab7">影片2</a></li>  
+    <li><a href="#tab8">心智圖2</a></li>  
 	{% if user.is_authenticated %}
     <li><a href="#tab9">作業：不斷發球</a></li>    
 	{% endif %}
@@ -376,14 +376,14 @@ $(function () {
   <ul class="tabs">
     <li><a href="#tab1">影片：單向選擇結構</a></li>
     <li><a href="#tab2">範例：電流急急棒</a></li>
-    <li><a href="#tab3">影片</a></li>
-    <li><a href="#tab4">心智圖</a></li>
+    <li><a href="#tab3">影片1</a></li>
+    <li><a href="#tab4">心智圖1</a></li>
 	{% if user.is_authenticated %}
     <li><a href="#tab5">作業：電流急急棒</a></li>
 	{% endif %}
     <li><a href="#tab6">練習：開車</a></li>  
-    <li><a href="#tab7">影片</a></li>  
-    <li><a href="#tab8">心智圖</a></li>
+    <li><a href="#tab7">影片2</a></li>  
+    <li><a href="#tab8">心智圖2</a></li>
 	{% if user.is_authenticated %}  	
     <li><a href="#tab9">作業：開車</a></li>    
 	{% endif %}
@@ -439,14 +439,14 @@ $(function () {
   <ul class="tabs">
     <li><a href="#tab1">影片：雙向選擇結構</a></li>
     <li><a href="#tab2">範例：打地鼠</a></li>
-    <li><a href="#tab3">影片</a></li>
-    <li><a href="#tab4">心智圖</a></li>
+    <li><a href="#tab3">影片1</a></li>
+    <li><a href="#tab4">心智圖1</a></li>
 	{% if user.is_authenticated %}
     <li><a href="#tab5">作業：打地鼠</a></li>
 	{% endif %}
     <li><a href="#tab6">練習：密碼檢查</a></li>    
-    <li><a href="#tab7">影片</a></li>  
-    <li><a href="#tab8">心智圖</a></li>
+    <li><a href="#tab7">影片2</a></li>  
+    <li><a href="#tab8">心智圖2</a></li>
 	{% if user.is_authenticated %}    
     <li><a href="#tab9">作業：密碼檢查</a></li>   	
 	{% endif %}
@@ -615,13 +615,13 @@ $(function () {
     <li><a href="#tab1">範例：養魚</a></li>
     <li><a href="#tab2">影片：養魚(上)</a></li>
     <li><a href="#tab3">影片：養魚(下)</a></li>   
-    <li><a href="#tab4">心智圖</a></li>
+    <li><a href="#tab4">心智圖1</a></li>
 	{% if user.is_authenticated %}   	
     <li><a href="#tab5">作業：養魚</a></li>
 	{% endif %}
     <li><a href="#tab6">練習：打磚塊</a></li>   	
-    <li><a href="#tab7">影片</a></li>   
-    <li><a href="#tab8">心智圖</a></li>
+    <li><a href="#tab7">影片2</a></li>   
+    <li><a href="#tab8">心智圖2</a></li>
 	{% if user.is_authenticated %}   	
     <li><a href="#tab9">作業：打磚塊</a></li>    
 	{% endif %}
