progress and rank

--- a/templates/show/ranklist.html
+++ b/templates/show/ranklist.html
@@ -21,9 +21,9 @@
 <TD>分數</TD>
 <TD>評分人數</TD>
 </tr>
-  {% for rank, show, students, score, count in lists %}
+  {% for show, students, score, count in lists %}
 	<tr>
-	<td>{{rank}}</td>
+	<td>{{forloop.counter}}</td>
 	<td>{{show.name}}</td>
 	<td>{% for student in students%}<A href="/account/profile/{{student.student.id}}"><img src="/static/avatar/s{{ student.student.profile.avatar }}.png"></a>({{student.seat}}){{student.student.first_name}}{% endfor %}</td>
 	<td><a href="/show/detail/{{show.id}}">{{show.title}}</a></td>
