--- a/templates/student/progress.html
+++ b/templates/student/progress.html
@@ -23,24 +23,10 @@
             {% for bar in bars1 %}
                 {% if forloop.counter0|divisibleby:17 %}
                 <tr>
-                <Td nowrap>{{bar.0.seat}}){{bar.0.student.first_name}} <a href="/student/check/{{bar.0.student.id}}/{{unit}}" target="_blank">作業</a><BR>
-			    {% for group in user.groups.all %}
-				{% if group.name == 'teacher' %}
-				    {% if not bar.0.certificate1 %}
-                    <a href="#" data-unit="1" data-classroomid="{{classroom_id}}" data-enrollid="{{ bar.0.id }}" data-action="certificate" class="certificate">發證書</a>
-                    {% else %}
-                    <a href="#" data-unit="1" data-classroomid="{{classroom_id}}" data-enrollid="{{ bar.0.id }}" data-action="uncertificate" class="certificate">取消證書</a> <a target="certView" href="/certificate/show/{{unit}}/{{bar.0.id}}"><img src="/static/images/certificate.png"></a>
-                    {% endif %}             
-
-                {% endif %}
-				{% if group.name == 'student' %}
-                    {% if bar.0.certificate1 %}
-                    <a target="certView" href="/certificate/show/{{unit}}/{{bar.0.id}}"><img src="/static/images/certificate.png"></a>
-                    {% else %}
-                    沒有證書
-                    {% endif %}                
-                {% endif %}
-                {% endfor %}
+                <Td nowrap>{{bar.0.seat}}){{bar.0.student.first_name}}
+                {% if bar.0.certificate1 %}
+                    <a target="_blank" href="/certificate/show/{{unit}}/{{bar.0.id}}"><img src="/static/images/certificate.png"></a>
+                {% endif %}                
 
                 {% endif %}
                 <Td nowrap><font size=-2>{{bar.1.publication_date|date:"Y/m/d"}}</font><br>{{bar.1.score}}-<font size=-2>{{bar.2}}</font></Td>
@@ -49,27 +35,11 @@
             {% if unit == "2" %}            
             {% for bar in bars2 %}
                 {% if forloop.counter0|divisibleby:8 %}
-                <tr><Td>{{bar.0.seat}}){{bar.0.student.first_name}} <a href="/student/check/{{bar.0.student.id}}/{{unit}}" target="_blank">作業</a><BR>
-				
-			    {% for group in user.groups.all %}
-				{% if group.name == 'teacher' %}
-				    {% if not bar.0.certificate2 %}
-                    <a href="#" data-unit="2" data-classroomid="{{classroom_id}}" data-enrollid="{{ bar.0.id }}" data-action="certificate" class="certificate">發證書</a>
-                    {% else %}
-                    <a href="#" data-unit="2" data-classroomid="{{classroom_id}}" data-enrollid="{{ bar.0.id }}" data-action="uncertificate" class="certificate">取消證書</a> <a target="certView" href="/certificate/show/{{unit}}/{{bar.0.id}}"><img src="/static/images/certificate.png"></a>
-                    {% endif %}             
-
-                {% endif %}
-				{% if group.name == 'student' %}
+                <tr><Td>{{bar.0.seat}}){{bar.0.student.first_name}}
                     {% if bar.0.certificate2 %}
-                    <a target="certView" href="/certificate/show/{{unit}}/{{bar.0.id}}"><img src="/static/images/certificate.png"></a>
-                    {% else %}
-                    沒有證書
+                    <a target="_blank" href="/certificate/show/{{unit}}/{{bar.0.id}}"><img src="/static/images/certificate.png"></a>
                     {% endif %}                
-                {% endif %}
-                {% endfor %}
-				
-				
+
                 {% endif %}
                 <Td><font size=-2>{{bar.1.publication_date|date:"Y/m/d"}}</font><br>{{bar.1.score}}-<font size=-2>{{bar.2}}</font></Td>
             {% endfor %}
@@ -77,27 +47,10 @@
             {% if unit == "3" %}            
             {% for bar in bars3 %}
                 {% if forloop.counter0|divisibleby:8 %}
-                <tr><Td>{{bar.0.seat}}){{bar.0.student.first_name}} <a href="/student/check/{{bar.0.student.id}}/{{unit}}" target="_blank">作業</a><BR>
-				
-			    {% for group in user.groups.all %}
-				{% if group.name == 'teacher' %}
-				    {% if not bar.0.certificate3 %}
-                    <a href="#" data-unit="3" data-classroomid="{{classroom_id}}" data-enrollid="{{ bar.0.id }}" data-action="certificate" class="certificate">發證書</a>
-                    {% else %}
-                    <a href="#" data-unit="3" data-classroomid="{{classroom_id}}" data-enrollid="{{ bar.0.id }}" data-action="uncertificate" class="certificate">取消證書</a> <a target="certView" href="/certificate/show/{{unit}}/{{bar.0.id}}"><img src="/static/images/certificate.png"></a>
-                    {% endif %}             
-
-                {% endif %}
-				{% if group.name == 'student' %}
+                <tr><Td>{{bar.0.seat}}){{bar.0.student.first_name}}
                     {% if bar.0.certificate3 %}
-                    <a target="certView" href="/certificate/show/{{unit}}/{{bar.0.id}}"><img src="/static/images/certificate.png"></a>
-                    {% else %}
-                    沒有證書
+                    <a target="_blank" href="/certificate/show/{{unit}}/{{bar.0.id}}"><img src="/static/images/certificate.png"></a>
                     {% endif %}                
-                {% endif %}
-                {% endfor %}
-				
-				
                 {% endif %}
                 <Td><font size=-2>{{bar.1.publication_date|date:"Y/m/d"}}</font><br>{{bar.1.score}}-<font size=-2>{{bar.2}}</font></Td>
             {% endfor %}
@@ -105,25 +58,10 @@
             {% if unit == "4" %}            
             {% for bar in bars4 %}
                 {% if forloop.counter0|divisibleby:8 %}
-                <tr><Td>{{bar.0.seat}}){{bar.0.student.first_name}}<a href="/student/check/{{bar.0.student.id}}/{{unit}}" target="_blank">作業</a><BR>
-				
-			    {% for group in user.groups.all %}
-				{% if group.name == 'teacher' %}
-				    {% if not bar.0.certificate4 %}
-                    <a href="#" data-unit="4" data-classroomid="{{classroom_id}}" data-enrollid="{{ bar.0.id }}" data-action="certificate" class="certificate">發證書</a>
-                    {% else %}
-                    <a href="#" data-unit="4" data-classroomid="{{classroom_id}}" data-enrollid="{{ bar.0.id }}" data-action="uncertificate" class="certificate">取消證書</a> <a target="certView" href="/certificate/show/{{unit}}/{{bar.0.id}}"><img src="/static/images/certificate.png"></a>
-                    {% endif %}             
-
-                {% endif %}
-				{% if group.name == 'student' %}
-                    {% if bar.0.certificate4 %}
-                    <a target="certView" href="/certificate/show/{{unit}}/{{bar.0.id}}"><img src="/static/images/certificate.png"></a>
-                    {% else %}
-                    沒有證書
+                <tr><Td>{{bar.0.seat}}){{bar.0.student.first_name}}
+                  {% if bar.0.certificate4 %}
+                    <a target="_blank" href="/certificate/show/{{unit}}/{{bar.0.id}}"><img src="/static/images/certificate.png"></a>
                     {% endif %}                
-                {% endif %}
-                {% endfor %}
                 {% endif %}
                 <Td><font size=-2>{{bar.1.publication_date|date:"Y/m/d"}}</font><br>{{bar.1.score}}-<font size=-2>{{bar.2}}</font></Td>
             {% endfor %}
