--- a/templates/student/classroom.html
+++ b/templates/student/classroom.html
@@ -26,6 +26,7 @@
 			<a href="/show/rank/1/{{enroll.classroom_id}}/">美工王</a>｜
 			<a href="/show/rank/2/{{enroll.classroom_id}}/">程式王</a>｜
 			<a href="/show/rank/3/{{enroll.classroom_id}}/">創意王</a>｜			
+			<a target=_blank href="http://drscratch.programamos.es/">Dr Scratch</a>
 			</td>
 		</tr>	
         <tr>
