--- a/templates/show/gallerylist.html
+++ b/templates/show/gallerylist.html
@@ -2,6 +2,7 @@
 
 {% block title %}My Blog{% endblock %}
 {% load tz %}
+{% load tag %}
 {% block content %}
   {% for post in lists %}
     <h2>
@@ -11,7 +12,7 @@
     </h2>
   <iframe allowtransparency="true" width="485" height="402" src="http://scratch.mit.edu/projects/embed/{{ post.number  }}/?autostart=false" frameborder=“0” allowfullscreen></iframe>
     <p class="date">
-      Published {{ post.publish|timezone:'Asia/Taipei' }} by {{ post.author.first_name }}
+      Published {{ post.publish}} by {{ post.id|show_member }}
     </p>
   {% endfor %}
  {% include "pagination.html" with page=page_obj %}  
