--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -327,8 +327,8 @@ label span{color:#FF0000; background-color:inherit;}
 /* Tables + Comments */
 table, th, td, #comments .avatar, #comments input, #comments textarea{border-color:#D7D7D7;}
 th{color:#FFFFFF; background-color:#373737;}
-tr, #comments li, #comments input[type="submit"], #comments input[type="reset"]{color:inherit; background-color:;#F7F7F7;}
-tr:nth-child(even), #comments li:nth-child(even){color:inherit; background-color:rgba(225, 225, 225, 0.3)}
+tr, #comments li, #comments input[type="submit"], #comments input[type="reset"]{color:inherit; background-color:#FFFFFF;}
+tr:nth-child(even), #comments li:nth-child(even){color:inherit; background-color:#F8F8F8}
 table a, #comments a{background-color:inherit;}
 
 
