--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,4 +2,5 @@
 {% block title %} Welcome ! {% endblock %}
 {% block content %}
 		<img src="/static/images/program.png">
+		<BR>註冊使用者：{{user_count}}人</BR>
 {% endblock %}
