--- a/templates/student/lesson.html
+++ b/templates/student/lesson.html
@@ -1444,7 +1444,7 @@ $(function () {
     <li><a href="#tab2">說明文字</a></li>
     <li><a href="#tab3">圖片下載</a></li>
 	{% if user.is_authenticated %}	
-    <li><a href="#tab4">見縫插針</a></li>
+    <li><a href="#tab4">作業：見縫插針</a></li>
 	{% endif %}
   <div class="clr"></div>
   <section class="block">
