--- a/templates/base.html
+++ b/templates/base.html
@@ -130,7 +130,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <div class="wrapper row6">
   <div id="copyright" class="clear"> 
     <!-- ################################################################################################ -->
-    <p class="fl_left">Copyright &copy; 2016 - All Rights Reserved - <a href="#">臺北市立南港高中高慧君老師製作</a></p>
+    <p class="fl_left">Copyright &copy; 2016 - 網站開發：臺北市立南港高中高慧君老師、臺北市立大直高中魏仲良老師</a></p>
     <p class="fl_right">Template by <a target="_blank" href="http://www.os-templates.com/" title="Free Website Templates">OS Templates</a> <a href="http://www.freepik.com">Designed by Freepik</a></p>
     <!-- ################################################################################################ -->
   </div>
