--- a/templates/student/classroom.html
+++ b/templates/student/classroom.html
@@ -13,8 +13,8 @@
 			<a href="../classmate/{{enroll.classroom_id}}">同學</a>｜
 			<a href="../work/{{enroll.classroom_id}}">作業</a>｜
 			<a href="../memo_all/{{enroll.classroom_id}}">心得</a>｜
-			<a href="/blog/bug/class/{{enroll.classroom_id}}">Bug專區</a>｜
-			<a href="/blog/bug/add/{{enroll.classroom_id}}">Bug求救</a>｜			
+			<a href="../bug/class/{{enroll.classroom_id}}">Bug專區</a>｜
+			<a href="../bug/add/{{enroll.classroom_id}}">Bug求救</a>｜			
 			</td>
 		</tr>
         <tr>
@@ -23,13 +23,13 @@
 			{% if enroll.group_show > 0 %}
 			<a href="/show/group/submit/{{enroll.group_show}}/{{enroll.classroom_id}}">繳交</a>｜
 			{% endif %}
+			<a target=_blank href="http://drscratch.programamos.es/">Dr Scratch</a>｜
+			{% if enroll.group_show > 0 %}
+			<a href="/show/drscratch/{{enroll.group_show}}">上傳分析圖</a>｜
+			{% endif %}			
 			<a href="/show/rank/1/{{enroll.classroom_id}}/">美工王</a>｜
 			<a href="/show/rank/2/{{enroll.classroom_id}}/">程式王</a>｜
 			<a href="/show/rank/3/{{enroll.classroom_id}}/">創意王</a>｜			
-			<a target=_blank href="http://drscratch.programamos.es/">Dr Scratch</a>
-			{% if enroll.group_show > 0 %}
-			<a href="/show/drscratch/{{enroll.group_show}}">上傳分析圖</a>
-			{% endif %}
 			</td>
 		</tr>	
         <tr>
