--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %} Welcome ! {% endblock %}
 {% block content %}
+      <img src="/static/images/banner.png"><Br><br>
 		<img src="/static/images/program.png">
 		<BR>註冊使用者：{{user_count}}人</BR>
 {% endblock %}
