--- a/templates/account/dashboard.html
+++ b/templates/account/dashboard.html
@@ -7,7 +7,7 @@
   <p>Welcome to your dashboard.</p>
   <Table>
 {% for message in messages reversed %}
-    <Tr><td><img src="/static/images/icon.gif"> {{ message.time|timezone:'Asia/Taipei' }} <a href="{{ message.url }}">{{ message.title|safe }}</a></td></Tr>
+    <Tr><td><img src="/static/images/scratch1.gif"> {{ message.time}} <a href="{{ message.url }}">{{ message.title|safe }}</a></td></Tr>
 {% endfor %}
 </Table>
 {% endblock %}
