--- a/templates/account/event_list.html
+++ b/templates/account/event_list.html
@@ -2,6 +2,10 @@
 {% block title %} Teachers {% endblock %}
 {% block content %}
 {% load tag %}
+搜尋記錄：
+    <form action="."  method="get">
+      <input type="text" name = "q"><input type="submit" value="送出"/>
+    </form>
 {{user_name}}
         <table>
         <tr>
