--- a/templates/account/event_list.html
+++ b/templates/account/event_list.html
@@ -22,4 +22,6 @@
         {% endfor %}
         </table>
         {% include "pagination.html" with page=page_obj %}
+        
+        <BR><a href="/account/event/clear">清除所有事件</a>
 {% endblock %}
