--- a/templates/account/event_list.html
+++ b/templates/account/event_list.html
@@ -23,5 +23,7 @@
         </table>
         {% include "pagination.html" with page=page_obj %}
         
-        <BR><a href="/account/event/clear">清除所有事件</a>
+        <BR>
+        <a href="/account/event/clear" onclick="return confirm('確定要清除嗎?')">清除所有事件</a>|
+        <a href="/account/event/excel">下載到Excel</a>
 {% endblock %}
