--- a/templates/base.html
+++ b/templates/base.html
@@ -153,6 +153,7 @@ Licence URI: http://www.os-templates.com/template-terms
   });
  
   $(document).ready(function(){
+    $('main').css('padding-top', $('.row0').height()+15+'px');
     {% block domready %}
     {% endblock %}
   });
