--- a/templates/account/dashboard.html
+++ b/templates/account/dashboard.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 {% load tz %}
+{% load tag %}
 {% block title %}Dashboard{% endblock %}
 
 {% block content %}
   <h1>訊息</h1>
   <Table>
-{% for message in messages reversed %}
-    <Tr><td><img src="/static/images/scratch1.gif"> {{ message.time}} <a href="{{ message.url }}">{{ message.title|safe }}</a></td></Tr>
+{% for message in messages reversed %}<Tr><td><img src="/static/images/scratch1.gif"> {{ message.time}} <a href="{{ message.url }}">{{  message.title|safe }}</a>{{ message.time|new }}</td></Tr>
 {% endfor %}
 </Table>
 {% endblock %}
