--- a/templates/base.html
+++ b/templates/base.html
@@ -38,6 +38,9 @@ Licence URI: http://www.os-templates.com/template-terms
 		<li><a href="/account/profile/{{user.id}}">個人檔案</a></li>		
 			{% if user.id == 1 %}
 		<li><a href="/account/userlist">帳號管理</a></li>
+            {% if not request.user|has_group:"teacher" %}
+		<li><a href="/account/event/0">事件</a></a></li>            
+            {% endif %}
 			{% endif %}				        
 
             {% if request.user|has_group:"teacher" %} 	
@@ -53,8 +56,9 @@ Licence URI: http://www.os-templates.com/template-terms
 		<li><a href="/account/avatar/"><img src="/static/avatar/s{{ user.profile.avatar }}.png"><strong>{{ user.first_name }}</strong></a></li>
 		<li><a href="/account/logout" class='button'>登出</a></li>
 		{% else %}
-		<li>歡迎</li>
-		<li>請<a href="/account/login" class='button'>登入</a></li>
+    	歡迎光臨!
+        <li><a href="/account/register" class='button'>註冊新帳號</a></li>
+		<li><a href="/account/login" class='button'>登入</a></li>
 		{% endif %}
       </ul>
     </div>
@@ -129,7 +133,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <div class="wrapper row6">
   <div id="copyright" class="clear"> 
     <!-- ################################################################################################ -->
-    <p class="fl_left">Copyright &copy; 2016 - 網站開發：臺北市立南港高中高慧君老師、臺北市立大直高中魏仲良老師</a></p>
+    <p class="fl_left">Copyright &copy; 2016 - 網站開發：高慧君、魏仲良<BR>Find us on:<A target=_blank href="http://github.com/jeankao/scratch">Github</a></BR></p>
     <p class="fl_right">Template by <a target="_blank" href="http://www.os-templates.com/" title="Free Website Templates">OS Templates</a> <a href="http://www.freepik.com">Designed by Freepik</a></p>
     <!-- ################################################################################################ -->
   </div>
