--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -121,23 +121,22 @@ $(function () {
         <BR>
         {% for enroll in enrolls %}
         {% if enroll.certificate1 %}
-        <img src='/static/certificate/1/{{enroll.id}}.jpg'>
+        <img src='/static/certificate/1/{{enroll.id}}.jpg'><hr>
         {% endif %}
         <Br>
         {% if enroll.certificate2 %}
-        <img src='/static/certificate/2/{{enroll.id}}.jpg'>
+        <img src='/static/certificate/2/{{enroll.id}}.jpg'><hr>
         {% endif %}
         <Br>
         {% if enroll.certificate3 %}
-        <img src='/static/certificate/3/{{enroll.id}}.jpg'>
+        <img src='/static/certificate/3/{{enroll.id}}.jpg'><hr>
         {% endif %}
         <Br>
         {% if enroll.certificate4 %}
-        <img src='/static/certificate/4/{{enroll.id}}.jpg'>
+        <img src='/static/certificate/4/{{enroll.id}}.jpg'><hr>
         {% endif %}
         <Br>        
         {% endfor %}    
-        </article>
     </article>
   </section>
 </section>
