--- a/templates/account/user_list.html
+++ b/templates/account/user_list.html
@@ -14,7 +14,7 @@
                 <td>{{user.first_name}}</td>
                 <td>{{user.last_login}}</td>
                 <td>
-                    {% if user.groups.all.0.name == "teacher"  %}<img src="/static/images/teacher.png"><a href="#" data-userid="{{ user.id }}" data-action="unset" class="teacher">取消教師{% else %}<a href="#" data-userid="{{ user.id }}" data-action="set" class="teacher">設為教師</a>{% endif %}
+                    {% if user.groups.all.0.name == "teacher"  %}<a href="#" data-userid="{{ user.id }}" data-action="unset" class="teacher"><img src="/static/images/teacher.png">取消教師{% else %}<a href="#" data-userid="{{ user.id }}" data-action="set" class="teacher">設為教師</a>{% endif %}
                 |<A href="/account/password/{{user.id}}">重設密碼</a>|<A href="/account/realname/{{user.id}}">設定姓名</a></td>
             </tr>
         {% endfor %}
@@ -36,11 +36,11 @@
         {
           var previous_action = $(launcher).data('action');
 		   if (previous_action == 'set') {
-               $(launcher).html("<img src='/static/images/teacher.png'>取消教師");
+               $(launcher).html("<img src='/static/images/teacher.png'>取消教師|");
                $(launcher).data('action', 'unset');
            } else {
-               $(launcher).data('action', 'set');
-               $(launcher).html("設為教師");
+               $(launcher).html("設為教師|");
+               $(launcher).data('action', 'set');               
            }
         }
 		else {
