--- a/templates/account/dashboard.html
+++ b/templates/account/dashboard.html
@@ -6,7 +6,12 @@
 {% block content %}
   <h1>訊息</h1>
   <Table>
-{% for message in messages reversed %}<Tr><td><img src="/static/images/scratch1.gif"> {{ message.time}} <a href="{{ message.url }}">{{  message.title|safe }}</a>{{ message.time|new }}</td></Tr>
+{% for messagepoll, message in messages reversed %}<Tr><td><img src="/static/images/scratch1.gif"> {{ message.time}}
+<a href="/account/message/{{ messagepoll.id }}">{{ message.title|safe }}</a>
+{% if not messagepoll.read %}
+{{ message.time|new }}
+{% endif %}
+</Tr>
 {% endfor %}
 </Table>
 {% endblock %}
