--- a/templates/teacher/classroom_list.html
+++ b/templates/teacher/classroom_list.html
@@ -14,6 +14,7 @@
             <td>
                 <a href="/teacher/classroom/edit/{{classroom.id}}">修改</a>|			
                 <a href="/student/classmate/{{classroom.id}}">學生</a>|
+                <a href="/teacher/announce/{{classroom.id}}">公告</a>|
                 <a href="/student/group/{{classroom.id}}">組別</a>|
                 <a href="/teacher/work/{{classroom.id}}">作業</a>|
 				<a href="/teacher/exam/{{classroom.id}}">測驗</a>|
