--- a/templates/student/classmate.html
+++ b/templates/student/classmate.html
@@ -11,6 +11,7 @@
             <td>姓名</td>
             <td>組別</td>
             <td>最新登入</td>
+            <td>私訊</td>            
 			{% for group in user.groups.all %}
 			{% if group.name == 'teacher' %}            
             <td>事件</td>
@@ -33,6 +34,7 @@
             <td>{{enroll.student.first_name}}</td>
             <td>{{group_name}}</td>
             <td>{{enroll.student.last_login}}</td>
+            <td><a href="/account/line/add/{{enroll.student_id}}">發出私訊</a></td>
 			{% for group in user.groups.all %}
 			{% if group.name == 'teacher' %}              
             <td><a href="/account/event/{{enroll.student.id}}">事件</a></td>
