--- a/templates/teacher/announce_detail.html
+++ b/templates/teacher/announce_detail.html
@@ -23,7 +23,7 @@
            {% if announce_read.2.read %}
            已讀
            {% else %}
-            未讀           
+           <font color=red>未讀</font>           
            {% endif %}
            </td>
            </tr>
