--- a/templates/account/line_detail.html
+++ b/templates/account/line_detail.html
@@ -2,6 +2,7 @@
 {% block title %} Teachers {% endblock %}
 {% load tag %}
 {% block content %}
+        <h1>私訊來源：<a href="/account/profile/{{message.author_id}}">{{message.author_id|name}}</a></h1>
         <h1>私訊對象：{{messagepoll.reader_id|name}}</h1>
         <table>
             <tr>
