--- a/templates/base.html
+++ b/templates/base.html
@@ -97,7 +97,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <div class="wrapper row3">
-  <main class="container clear"> 
+  <main class="container clear" style="padding-top: 81px;"> 
     <!-- main body -->
     <!-- ################################################################################################ -->
     <div id="content" class="content"> 
@@ -157,7 +157,7 @@ Licence URI: http://www.os-templates.com/template-terms
   });
  
   $(document).ready(function(){
-    $('main').css('padding-top', $('.row0').height()+15+'px');
+    //$('main').css('padding-top', $('.row0').height()+15+'px');
     {% block domready %}
     {% endblock %}
   });
