--- a/templates/account/dashboard.html
+++ b/templates/account/dashboard.html
@@ -7,7 +7,20 @@
   <h1>訊息</h1>
   <Table>
 {% for messagepoll, message in messages %}<Tr><td><img src="/static/images/scratch1.gif"> {{ message.time}}
-<a href="/account/message/{{ messagepoll.id }}">{{ message.title|safe }}</a>
+<a href="/account/message/{{ messagepoll.id }}">
+{% if message.title|img == "line"%}
+<img src="/static/images/line.png">
+{% elif message.title|img == "announce" %}
+<img src="/static/images/announce.png">
+{% endif %}
+{{ message.title}}
+{% if message.title|img == "assistant"%}
+<img src="/static/images/assistant.png">
+{% elif message.title|img == "teacher" %}
+<img src="/static/images/teacher.png">
+{% endif %}
+</a>
+
 {% if not messagepoll.read %}
 <img src="/static/images/new.gif">
 {% endif %}
