--- a/templates/student/classroom.html
+++ b/templates/student/classroom.html
@@ -18,8 +18,8 @@
 		</tr>
         <tr>
             <td>互動：
-		    <a href="/account/line/">我的私訊</a>｜			
-			<a href="/account/line/add/{{enroll.classroom_id|teacher_id}}">私訊老師</a>｜
+		    <a href="/account/line/{{enroll.classroom_id}}">我的私訊</a>｜			
+			<a href="/account/line/add/{{enroll.classroom_id}}/{{enroll.classroom_id|teacher_id}}">私訊老師</a>｜
 			<a href="/student/bug/class/{{enroll.classroom_id}}">Bug專區</a>｜
 			<a href="/student/bug/add/{{enroll.classroom_id}}">Bug求救</a>｜			
 			</td>
